[gd_scene load_steps=5 format=3 uid="uid://brfxxhs2obgip"]

[ext_resource type="FontFile" uid="uid://b05abb6xberv3" path="res://Fonts/VCR_OSD_MONO.ttf" id="1_4ud2x"]
[ext_resource type="Script" path="res://menu.gd" id="1_xeo2s"]

[sub_resource type="Theme" id="Theme_hbv7x"]
default_font = ExtResource("1_4ud2x")
default_font_size = 128
Label/colors/font_outline_color = Color(1, 1, 1, 1)

[sub_resource type="Theme" id="Theme_na1hp"]
default_font = ExtResource("1_4ud2x")
default_font_size = 64

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xeo2s")

[node name="LblHeading" type="Label" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 1216.0
offset_bottom = 192.0
theme = SubResource("Theme_hbv7x")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "Chaos Pinball"
horizontal_alignment = 1

[node name="LblSubtitle" type="Label" parent="."]
layout_mode = 0
offset_top = 200.0
offset_right = 1272.0
offset_bottom = 226.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "Chaos can be boring too... and boring can be annoying too"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = 192.0
offset_right = -64.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="BtnStart" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_na1hp")
text = "Start Game"

[node name="BtnStart2" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_na1hp")
text = "Quit Game"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/BtnStart" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/BtnStart2" to="." method="_on_btn_start_2_pressed"]
